--- a/src/app/pages/user/task/task.component.html
+++ b/src/app/pages/user/task/task.component.html
@@ -1,6 +1,8 @@
-<section>title</section>
+{{task|json}}
 
-<section>description</section>
+<section>{{task.name}}</section>
+
+<section>{{task.description}}</section>
 
 <section>stories</section>
 
