--- a/src/app/core/theme/user/user.component.html
+++ b/src/app/core/theme/user/user.component.html
@@ -5,10 +5,10 @@
 				<a
 					routerLinkActive="_activeLink"
 					(click)="showSidebar = false"
-					routerLink="/profile"
+					routerLink="/mineprojects"
 					class="nav__a"
 				>
-					<span class="material-icons">home</span>
+					<span class="material-icons">folder</span>
 				</a>
 			</li>
 			<li class="nav__li _burger" (click)="showSidebar = !showSidebar">
