--- a/src/app/pages/user/projects/project/project.component.html
+++ b/src/app/pages/user/projects/project/project.component.html
@@ -1,1 +1,6 @@
-{{project|json}}
+<div class="document__title">
+    {{project.name}}
+</div>
+<div class="document__description">
+    {{project.description}}
+</div>
