--- a/src/app/pages/user/projects/projects.component.html
+++ b/src/app/pages/user/projects/projects.component.html
@@ -1,1 +1,32 @@
-<app-project *ngFor="let project of projects" [project]="project"></app-project>
+
+
+<div class="documents-wrapper" [class.documents-wrapper--open]="isMenuOpen"> 
+    <div class="documents-container">
+        <div class="documents-list">
+            <div class="burger-wrap" class="burger-wrap"  (click)="isMenuOpen=!isMenuOpen">
+                <div class="burger" [class.burger--close]="isMenuOpen"></div>
+            </div> 
+            <div class="documents-main">
+                <div class="documents-main-content">
+                    <div *ngFor="let project of projects" class="documents-main-row">
+                        <app-project [project]="project"></app-project>
+                    </div>
+                </div>
+            </div>
+            <div class="documents-sidebar" [class.documents-sidebar--open]="isMenuOpen">
+                <div class="documents-sidebar-content">
+                    <div class="documents-sidebar__img">
+                        <img src="assets/default.png" alt="">
+                    </div>
+                    <div class="documents-sidebar__title">
+                        Title of sidebar...
+                    </div>
+                    <div class="documents-sidebar__description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint molestiae consequatur quae. Modi corporis rem amet tempore debitis assumenda minima repellat labore expedita quam. Itaque accusamus culpa ullam necessitatibus nisi.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
