--- a/src/app/pages/user/projects/project/project.component.html
+++ b/src/app/pages/user/projects/project/project.component.html
@@ -1,6 +1,6 @@
-<div class="document__title">
+<div class="documents__title">
     {{project.name}}
 </div>
-<div class="document__description">
+<div class="documents__description">
     {{project.description}}
 </div>
