--- a/src/app/pages/user/projects/projects.component.html
+++ b/src/app/pages/user/projects/projects.component.html
@@ -3,16 +3,9 @@
 <div class="documents-wrapper" [class.documents-wrapper--open]="isMenuOpen"> 
     <div class="documents-container">
         <div class="documents-list">
-            <div class="burger-wrap" class="burger-wrap"  (click)="isMenuOpen=!isMenuOpen">
+            <div class="burger-wrap" class="burger-wrap"  (click)="isMenuOpen=!isMenuOpen" [class.burger-wrap--open]="isMenuOpen">
                 <div class="burger" [class.burger--close]="isMenuOpen"></div>
             </div> 
-            <div class="documents-main">
-                <div class="documents-main-content">
-                    <div *ngFor="let project of projects" class="documents-main-row">
-                        <app-project [project]="project"></app-project>
-                    </div>
-                </div>
-            </div>
             <div class="documents-sidebar" [class.documents-sidebar--open]="isMenuOpen">
                 <div class="documents-sidebar-content">
                     <div class="documents-sidebar__img">
@@ -26,6 +19,14 @@
                     </div>
                 </div>
             </div>
+            <div class="documents-main">
+                <div class="documents-main-content">
+                    <div *ngFor="let project of projects" class="documents-main-row">
+                        <app-project [project]="project"></app-project>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
