--- a/src/app/pages/user/tasks/tasks.component.html
+++ b/src/app/pages/user/tasks/tasks.component.html
@@ -16,10 +16,10 @@
 				<div class="documents-sidebar-content">
 					<wbutton (click)="create()">Create</wbutton>
 
-					<taskproject-selector
+					<!-- <taskproject-selector
 						[value]="project_id"
 						(wChange)="project_id = $event"
-					></taskproject-selector>
+					></taskproject-selector> -->
 
 					<wselect [items]="['cat', 'dog']"></wselect>
 
