--- a/src/app/modules/task/selectors/task/task-selector.component.html
+++ b/src/app/modules/task/selectors/task/task-selector.component.html
@@ -1,5 +1,5 @@
 <wselect
-	(modelChange)="onChange.emit($event)"
+	(modelChange)="wChange.emit($event)"
 	placeholder="Select task"
 	[select]="value"
 	[items]="items"
